<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ejercicio03_Formulario</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tv_nombre">Nombre:</string>
    <string name="tv_ciudad">Ciudad:</string>
    <string-array name="Array_ciudades">
        <item >Valladolid</item>
        <item >Salamanca</item>
        <item >Soria</item>
        <item >Segovia</item>
    </string-array>
    <string name="tb_encendido">Activado</string>
    <string name="tb_apagado">Desactivado</string>
    <string name="enviar">Enviar</string>

</resources>
