<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ejercicio03_formulario.MainActivity" >

    <EditText
        android:id="@+id/tf_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tv_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tf_nombre"
        android:layout_alignBottom="@+id/tf_nombre"
        android:layout_alignParentLeft="true"
        android:text="@string/tv_nombre" />

    <Spinner
        android:id="@+id/sp_ciudades"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tv_ciudad"
        android:layout_alignLeft="@+id/tf_nombre"
        android:entries="@array/Array_ciudades" />

    <TextView
        android:id="@+id/tv_ciudad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tf_nombre"
        android:layout_marginTop="37dp"
        android:text="@string/tv_ciudad" />

    <ToggleButton
        android:id="@+id/tb_activar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_ciudad"
        android:layout_below="@+id/tv_ciudad"
        android:layout_marginTop="32dp"
        android:checked="false"
        android:text="ToggleButton"
        android:textOff="@string/tb_apagado"
        android:textOn="@string/tb_encendido" />

    <Button
        android:id="@+id/b_enviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tb_activar"
        android:layout_alignRight="@+id/tb_activar"
        android:layout_below="@+id/tb_activar"
        android:layout_marginTop="36dp"
        android:text="@string/enviar" />

    <EditText
        android:id="@+id/ed_datos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/b_enviar"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/sp_ciudades"
        android:layout_below="@+id/b_enviar"
        android:ems="10"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

</RelativeLayout>